# Mandelbrot_GL

./: CMakeLists.txt
src/: Main.cpp  shader.frag  shader.vert
